--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <h5>
     	<br>
-		<p style="padding-bottom:10px">50% of profits (fees less operating costs) will be contributed to charities focused on mental health. We have deliberately designed our operating costs to be as lean as possible while still acheiving world-class reliability and security. We run our node on Swiss-based servers to help diversify the geographic footprint of the network, and given stronger Swiss privacy laws.</p>
+		<p style="padding-bottom:10px">50% of profits (fees less operating costs) will be contributed to charities focused on mental health. We have deliberately designed our operating costs to be as lean as possible while still achieving world-class reliability and security. We run our node on Swiss-based servers to help diversify the geographic footprint of the network, and given stronger Swiss privacy laws.</p>
 
 		<p style="padding-bottom:10px">Our goal is to be as transparent as possible about our finances. We have therefore created the below Google sheet to track operating expenses, income, profits, and charitable donations.</p>
 
